marcos/tests/ui/fail_on_enum.stderr
error: ParseAttributes only supports structs
 --> tests/ui/fail_on_enum.rs:5:6
  |
5 | enum NotAStruct {
  |      ^^^^^^^^^^
